--- a/board/board/src/main/resources/templates/save.html
+++ b/board/board/src/main/resources/templates/save.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>save</title>
 </head>
 <body>
-$END$
+<form action="/board/save" method="post" enctype="multipart/form-data">
+    작성자: <input type="text" name="boardWriter"> <br>
+    비밀번호: <input type="text" name="boardPass"> <br>
+    제목: <input type="text" name="boardTitle"> <br>
+    내용: <textarea name="boardContents" cols="30" rows="10"></textarea> <br>
+    파일추가: <input type="file" name="boardFile"> <br>
+    <input type="submit" value="글작성">
+</form>
 </body>
 </html>
